--- a/public/sidebar.css
+++ b/public/sidebar.css
@@ -6,6 +6,10 @@
 .side-nav {
   background-color: rgb(143, 139, 139);
   padding: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 span {
@@ -55,4 +59,11 @@ span {
   .sidenav a {
     font-size: 18px;
   }
+}
+
+.logout{
+  font-size: 1.5em;
+  color: #000;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin-right: 10%;
 }
