--- a/views/admin-login.hbs
+++ b/views/admin-login.hbs
@@ -4,11 +4,11 @@
                     <input type="text" name="username" class="log-onoma" placeholder="Όνομα χρήστη" required="required" autofocus>
                     <input type="password" name="password" class="log-pass" placeholder="Κωδικός πρόσβασης" required="required">
 
-            {{!-- {{#if message}}
-                <div class="alert alert-primary" role="alert">
+            {{#if message}}
+                <div class="mess-alert" role="alert">
                     {{message}}
                 </div>
-            {{/if}} --}}
+            {{/if}}
                 <button type="submit" class="button">Είσοδος</button>
 
         </form>
