--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -6,6 +6,7 @@
 
 <div class="side-nav">
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    <a href="/admin/logout" class="logout">Αποσύνδεση</a>
 </div>
 
 <script>
