--- a/views/admin-add-exhibition.hbs
+++ b/views/admin-add-exhibition.hbs
@@ -36,7 +36,7 @@
 
         <div class="buttons">
             <button class="submit-btn" type="submit">Συνέχεια</button>
-            <a href="/admin">Ακύρωση</a>
+            <a href="/admin/edit">Ακύρωση</a>
         </div>
     </form>
 </div>
