--- a/views/admin-add-exhibition.hbs
+++ b/views/admin-add-exhibition.hbs
@@ -8,7 +8,7 @@
 
         <div class="img-ekthesis">
             <label for="link">Link Εικόνας</label>
-            <input type="text" name="link" id="link"
+            <input type="url" name="link" id="link"
                 placeholder="Πληκτρολογήστε το link για την αντιπροσωπευτική εικόνα της έκθεσης.."
                 value="{{ex_info.link}}" required>
         </div>
