--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,7 +1,7 @@
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="/admin/edit">Έργα</a>
-    <a href="/admin/addExhibition">Εκθέσεις</a>
+    <a href="/admin/Exhibitions">Εκθέσεις</a>
 </div>
 
 <div class="side-nav">
