--- a/views/admin-exhibitions.hbs
+++ b/views/admin-exhibitions.hbs
@@ -1,36 +1,89 @@
 <div class="main-exh">
-<button class="prosthiki" onclick="addExhibition()">Προσθήκη Νέας Έκθεσης</button>
-<div class="exhibitions-main container">
+    <button class="prosthiki" onclick="addExhibition()">Προσθήκη Νέας Έκθεσης</button>
+    <div id="current-exhibitions-container" class="exhibitions-main container">
+        <h3>Ενεργές εκθέσεις</h3>
+        <hr>
+        <div class="grid-exh" id="current-exh-grid"></div>
+    </div>
+    <div id="future-exhibitions-container" class="exhibitions-main container">
         <h3>Προσεχώς</h3>
         <hr>
-    <div class="grid-exh">
-        {{#each exh}}
-        <div class="exh">
-            <h4>{{this.onoma_ekthesis}}</h4>
-            <img src={{this.link}} alt="">
-            <h5><span id="title">Έναρξη Έκθεσης: </span>{{this.imerominia_enarxis}}</h5>
-            <h5><span id="title">Λήξη Έκθεσης: </span>{{this.imerominia_lixis}}</h5>
-            <h5><span id="title">Αίθουσα προβολής: </span>{{this.id_aithousas}}</h5>
-            <div class="buttons">
-                <button class="epex" onclick="updateExhibition({{this.id_ekthesis}})">Επεξεργασία</button>
-                <button class="diag">Διαγραφή</button>
-            </div>
-        </div>
-        {{/each}}
+        <div class="grid-exh" id="future-exh-grid"></div>
     </div>
 </div>
 
-</div>
-
 <script>
-
-    function updateExhibition(id_ekthesis){
-        window.location.href=`/admin/updateExhibition/${id_ekthesis}`
-
+    function updateExhibition(id_ekthesis) {
+        window.location.href = `/admin/updateExhibition/${id_ekthesis}`;
     }
 
-    function addExhibition(){
-        window.location.href="/admin/addExhibition";
+    function addExhibition() {
+        window.location.href = "/admin/addExhibition";
     }
 
+    const current_exh = {{{ current_exh }}};
+
+    const future_exh = {{{ future_exh }}};
+    function createExhibitionElement(exhibition) {
+        const exhDiv = document.createElement('div');
+        exhDiv.className = 'exh';
+
+        const h4 = document.createElement('h4');
+        h4.innerText = exhibition.onoma_ekthesis;
+
+        const img = document.createElement('img');
+        img.src = exhibition.link;
+        img.alt = '';
+
+        const startDate = document.createElement('h5');
+        startDate.innerHTML = `<span id="title">Έναρξη Έκθεσης: </span>${exhibition.imerominia_enarxis}`;
+
+        const endDate = document.createElement('h5');
+        endDate.innerHTML = `<span id="title">Λήξη Έκθεσης: </span>${exhibition.imerominia_lixis}`;
+
+        const room = document.createElement('h5');
+        room.innerHTML = `<span id="title">Αίθουσα προβολής: </span>${exhibition.id_aithousas}`;
+
+        const buttonsDiv = document.createElement('div');
+        buttonsDiv.className = 'buttons';
+
+        const editButton = document.createElement('button');
+        editButton.className = 'epex';
+        editButton.innerText = 'Επεξεργασία';
+        editButton.onclick = () => updateExhibition(exhibition.id_ekthesis);
+
+        const deleteButton = document.createElement('button');
+        deleteButton.className = 'diag';
+        deleteButton.innerText = 'Διαγραφή';
+
+        buttonsDiv.appendChild(editButton);
+        buttonsDiv.appendChild(deleteButton);
+
+        exhDiv.appendChild(h4);
+        exhDiv.appendChild(img);
+        exhDiv.appendChild(startDate);
+        exhDiv.appendChild(endDate);
+        exhDiv.appendChild(room);
+        exhDiv.appendChild(buttonsDiv);
+
+        return exhDiv;
+    }
+
+    function appendExhibitionsToContainer(exhibitions, containerId) {
+        const container = document.getElementById(containerId);
+        exhibitions.forEach(exhibition => {
+            const exhElement = createExhibitionElement(exhibition);
+            container.appendChild(exhElement);
+        });
+    }
+
+    appendExhibitionsToContainer(current_exh, 'current-exh-grid');
+    appendExhibitionsToContainer(future_exh, 'future-exh-grid');
+    first_exh = document.querySelector('#current-exh-grid ');
+    first_exh.querySelectorAll('.exh').forEach((exh1) => {
+
+        //set the background color of each exh1 to #d9f2b8
+        exh1.style.backgroundColor = '#dff2c7';
+
+    });
 </script>
