--- a/views/tickets.hbs
+++ b/views/tickets.hbs
@@ -7,8 +7,8 @@
             <h4>Τετάρτη: 9:00-15:00 & 17:00-21:00</h4>
             <h4>Πέμπτη: 9:00-15:00 & 17:00-21:00</h4>
             <h4>Παρασκευή: 9:00-15:00 & 17:00-21:00</h4>
-            <h4>Σάββατο: Κλειστά</h4>
-            <h4>Κυριακή: Κλειστά</h4>
+            <h4>Σάββατο: 9:00-15:00 & 17:00-21:00</h4>
+            <h4>Κυριακή: 9:00-15:00 & 17:00-21:00</h4>
             <h4 class="timi">Κόστος απλής εισόδου: 10 ευρώ(ολόκληρο).</h4>
             <h4 class="timi2">Επιπλέον χρέωση για είσοδο σε περιοδική έκθεση: 4 ευρώ/αίθουσα.</h4>
         </section>
