--- a/views/admin-main.hbs
+++ b/views/admin-main.hbs
@@ -17,6 +17,7 @@
     </div>
 </div>
 
+
 <script>
     function edit(arithmos_ergou) {
         window.location.href = `/admin/edit/${arithmos_ergou}`;
@@ -27,6 +28,9 @@
     }
 
     function deleteErgo(arithmos_ergou) {
-        window.location.href = "/admin/edit/delete/" + arithmos_ergou;
+        if (confirm("Είστε σίγουροι ότι θέλετε να διαγράψετε αυτό το έργο;")) {
+            window.location.href = "/admin/edit/delete/" + arithmos_ergou;
+        }
     }
+
 </script>
