--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -7,6 +7,7 @@
     <title>Van Gogh Art Gallery</title>
     <link rel="stylesheet" type="text/css" href="{{{css}}}">
     <link rel="stylesheet" type="text/css" href="/navbar.css">
+    <link rel="stylesheet" type="text/css" href="/footer.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
@@ -20,6 +21,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 
