new Ekthesi allagi

--- a/views/admin-add-exhibition.hbs
+++ b/views/admin-add-exhibition.hbs
@@ -26,7 +26,7 @@
 
         <div class="imerom">
                 <label for="datePicker">Διάρκεια Έκθεσης:</label>
-                <input type="text" id="datePicker" placeholder="Επιλέξτε Ημερομηνία" required>
+                <input type="text" id="datePicker" name="imerom" placeholder="Επιλέξτε Ημερομηνία" required>
         </div>
 
         <div class="buttons">
