redirect after add exhibition

--- a/views/admin-add-exhibition-2.hbs
+++ b/views/admin-add-exhibition-2.hbs
@@ -92,7 +92,7 @@
                 console.log(data);
                 if (data.success) {
                     alert('Επιτυχής υποβολή');
-                    window.location.href = '/admin/addExhibition';
+                    window.location.href = '/admin/Exhibitions';
                 } else {
                     alert('Αποτυχία υποβολής');
                 }
