--- a/public/admin-style.css
+++ b/public/admin-style.css
@@ -150,11 +150,18 @@ textarea#content {
 .prosthiki {
     width: 12%;
     font-size: 1.2em;
-    align-self: flex-end;
+    top:7em;
+    right: 8em;
+    position: absolute;
     padding: 0.3em;
     background-color: white;
     color: rgb(65, 131, 212);
     border: 0.2em solid rgb(65, 131, 212);
+}
+
+.button-add-ergo{
+    width: 100%;
+    height: 10vh;
 }
 
 .edit-form.prosthiki-form {
@@ -349,5 +356,4 @@ h1{
         width: 50%;
     }
 } 
-
 
