--- a/views/ektheseis.hbs
+++ b/views/ektheseis.hbs
@@ -1,48 +1,38 @@
-
-
 <section class="ektheseis">
     <h1>Προβάλλονται τώρα</h1>
 
     <div class="protes-aithouses">
+        {{#each current_exh}}
         <div class="aithousa">
-            <h3>Μύθοι και σύμβολα στη Νεοελληνική Τέχνη</h3>
-            <img src="https://www.nationalgallery.gr/wp-content/uploads/2023/06/4ebf35c3-d99a-f5fa-a0a1-5cc7551dc98e.jpg">
-            <h5>Ημερομηνία Διεξαγωγής: <span class="imerominia">6 Μαϊου - 20 Ιουλίου 2024</span></h5>
-            <h5>Αίθουσα Διεξαγωγής: <span class="arithmos-aithousas">1</span></h5>
+            <h3>{{this.onoma_ekthesis}}</h3>
+            <img src="{{this.link}}">
+            <h5>Ημερομηνία Διεξαγωγής: <span class="imerominia">{{this.imerominia_enarxis}} έως
+                    {{this.imerominia_lixis}}</span></h5>
+            <h5>Αίθουσα Διεξαγωγής: <span class="arithmos-aithousas">{{this.id_aithousas}}</span></h5>
             <h5 id="perigrafi-ekthesis">Περιγραφή</h5>
-            <p>Γλυπτά, ζωγραφικά έργα και σχέδια παρουσιάζονται στην περιοδική έκθεση, που εγκαινιάζεται το Σάββατο 10 Ιουνίου στις 20.30 στο Παράρτημα του Ναυπλίου, με σκοπό να διαφανεί η δημιουργικότητα των Ελλήνων καλλιτεχνών που υιοθετούν, εξελίσσουν  και μεταλλάσσουν το περιεχόμενο και τη μορφή του μύθου σε νέες προτάσεις έκφρασης, καθώς και οι διαφορετικές εικαστικές αφετηρίες των δημιουργών.
-
-                Η πρόσληψη του μύθου από τους Έλληνες ζωγράφους και γλύπτες γίνεται καταρχάς σύμφωνα με τις επιταγές της ακαδημαϊκής τέχνης. Ωστόσο, από τις τελευταίες δεκαετίες του 19ου αιώνα ο Ευρωπαϊκός Συμβολισμός προσδίδει νέα δυναμική στα μυθολογικά θέματα, προετοιμάζοντας το έδαφος για τους καλλιτέχνες των πρωτοποριών του 20ού αιώνα.
-
-                Η έκθεση στοχεύει παράλληλα, μέσω των εκπαιδευτικών προγραμμάτων που θα υλοποιηθούν, στην αποκωδικοποίηση των συμβόλων που περιέχονται στα έργα τέχνης με μυθολογικό περιεχόμενο, και στην αναζήτηση των αξιών και των μηνυμάτων που μεταφέρουν σε εμάς σήμερα.</p>
+            <p>{{this.perigrafi}}</p>
         </div>
-        <div class="aithousa">
-            <h3>Μύθοι και σύμβολα στη Νεοελληνική Τέχνη</h3>
-            <img src="https://www.nationalgallery.gr/wp-content/uploads/2023/06/4ebf35c3-d99a-f5fa-a0a1-5cc7551dc98e.jpg">
-            <h5>Ημερομηνία Διεξαγωγής: <span class="imerominia">6 Μαϊου - 20 Ιουλίου 2024</span></h5>
-            <h5>Αίθουσα Διεξαγωγής: <span class="arithmos-aithousas">1</span></h5>
-            <h5 id="perigrafi-ekthesis">Περιγραφή</h5>
-            <p>Γλυπτά, ζωγραφικά έργα και σχέδια παρουσιάζονται στην περιοδική έκθεση, που εγκαινιάζεται το Σάββατο 10 Ιουνίου στις 20.30 στο Παράρτημα του Ναυπλίου, με σκοπό να διαφανεί η δημιουργικότητα των Ελλήνων καλλιτεχνών που υιοθετούν, εξελίσσουν  και μεταλλάσσουν το περιεχόμενο και τη μορφή του μύθου σε νέες προτάσεις έκφρασης, καθώς και οι διαφορετικές εικαστικές αφετηρίες των δημιουργών.
 
-                Η πρόσληψη του μύθου από τους Έλληνες ζωγράφους και γλύπτες γίνεται καταρχάς σύμφωνα με τις επιταγές της ακαδημαϊκής τέχνης. Ωστόσο, από τις τελευταίες δεκαετίες του 19ου αιώνα ο Ευρωπαϊκός Συμβολισμός προσδίδει νέα δυναμική στα μυθολογικά θέματα, προετοιμάζοντας το έδαφος για τους καλλιτέχνες των πρωτοποριών του 20ού αιώνα.
-
-                Η έκθεση στοχεύει παράλληλα, μέσω των εκπαιδευτικών προγραμμάτων που θα υλοποιηθούν, στην αποκωδικοποίηση των συμβόλων που περιέχονται στα έργα τέχνης με μυθολογικό περιεχόμενο, και στην αναζήτηση των αξιών και των μηνυμάτων που μεταφέρουν σε εμάς σήμερα.</p>
-        </div>  
+        {{/each}}
 
     </div>
 
-    <div class="aithousa">
-            <h3>Μύθοι και σύμβολα στη Νεοελληνική Τέχνη</h3>
-            <img src="https://www.nationalgallery.gr/wp-content/uploads/2023/06/4ebf35c3-d99a-f5fa-a0a1-5cc7551dc98e.jpg">
-            <h5>Ημερομηνία Διεξαγωγής: <span class="imerominia">6 Μαϊου - 20 Ιουλίου 2024</span></h5>
-            <h5>Αίθουσα Διεξαγωγής: <span class="arithmos-aithousas">1</span></h5>
+    <h1 id="prosexws">Προσεχώς</h1>
+
+    <div class="protes-aithouses">
+        {{#each future_exh}}
+        <div class="aithousa">
+            <h3>{{this.onoma_ekthesis}}</h3>
+            <img src="{{this.link}}">
+            <h5>Ημερομηνία Διεξαγωγής: <span class="imerominia">{{this.imerominia_enarxis}} έως
+                    {{this.imerominia_lixis}}</span></h5>
+            <h5>Αίθουσα Διεξαγωγής: <span class="arithmos-aithousas">{{this.id_aithousas}}</span></h5>
             <h5 id="perigrafi-ekthesis">Περιγραφή</h5>
-            <p>Γλυπτά, ζωγραφικά έργα και σχέδια παρουσιάζονται στην περιοδική έκθεση, που εγκαινιάζεται το Σάββατο 10 Ιουνίου στις 20.30 στο Παράρτημα του Ναυπλίου, με σκοπό να διαφανεί η δημιουργικότητα των Ελλήνων καλλιτεχνών που υιοθετούν, εξελίσσουν  και μεταλλάσσουν το περιεχόμενο και τη μορφή του μύθου σε νέες προτάσεις έκφρασης, καθώς και οι διαφορετικές εικαστικές αφετηρίες των δημιουργών.
+            <p>{{this.perigrafi}}</p>
+        </div>
+        {{/each}}
+    </div>
 
-                Η πρόσληψη του μύθου από τους Έλληνες ζωγράφους και γλύπτες γίνεται καταρχάς σύμφωνα με τις επιταγές της ακαδημαϊκής τέχνης. Ωστόσο, από τις τελευταίες δεκαετίες του 19ου αιώνα ο Ευρωπαϊκός Συμβολισμός προσδίδει νέα δυναμική στα μυθολογικά θέματα, προετοιμάζοντας το έδαφος για τους καλλιτέχνες των πρωτοποριών του 20ού αιώνα.
 
-                Η έκθεση στοχεύει παράλληλα, μέσω των εκπαιδευτικών προγραμμάτων που θα υλοποιηθούν, στην αποκωδικοποίηση των συμβόλων που περιέχονται στα έργα τέχνης με μυθολογικό περιεχόμενο, και στην αναζήτηση των αξιών και των μηνυμάτων που μεταφέρουν σε εμάς σήμερα.</p>
-        </div>  
 
-        <h1 id="prosexws">Προσεχώς</h1>
 </section>
