--- a/public/ektheseis-style.css
+++ b/public/ektheseis-style.css
@@ -40,8 +40,9 @@ body {
 }
 
 .aithousa:hover {
-    background-color: #dc614c;
+    /* background-color: #7a3023; */
     transform: scale(1.05);
+    border: 1px solid rgb(247, 137, 53);
 }
 
 .aithousa h3 {
