--- a/views/admin-update-exh.hbs
+++ b/views/admin-update-exh.hbs
@@ -41,6 +41,21 @@
     </div>
 </form>
 
+ <h2>Έργα που περιέχονται</h2>
+
+<div class="erga-container">
+   
+    {{#each erga_exh}}
+        <div class="ergo-exh">
+            <h3>{{this.onoma}}</h3>
+            <img src="{{this.link}}">
+            <h4>Κωδικός έργου: {{this.arithmos_ergou}}</h4>
+            <button class="diag">Αφαίρεση</button>
+        </div>
+
+    {{/each}}
+</div>
+
 <script>
 
     document.addEventListener('DOMContentLoaded', function() {
@@ -80,6 +95,6 @@
         });
     });
 
-    document.getElementById('aithousa').value={{ekthes.id_aithousas}}
+     document.getElementById('aithousa').value={{ekthes.id_aithousas}};
 
 </script>
