--- a/views/admin-main.hbs
+++ b/views/admin-main.hbs
@@ -43,43 +43,84 @@
         }
     }
 
-    async function createErgoElement(ergo) {
-        const ergoDiv = document.createElement('div');
-        ergoDiv.className = 'ergo';
+    function createErgoElement(ergo) {
+        return new Promise((resolve, reject) => {
+            const ergoDiv = document.createElement('div');
+            ergoDiv.className = 'ergo';
 
-        const img = document.createElement('img');
-        img.src = ergo.link;
-        img.alt = '';
-        await img.decode();  // Ensure the image is fully loaded and decoded
+            const img = document.createElement('img');
+            img.src = ergo.link;
+            img.alt = '';
 
-        const h5Onoma = document.createElement('h5');
-        h5Onoma.innerText = ergo.onoma;
+            img.onload = () => {
+                const h5Onoma = document.createElement('h5');
+                h5Onoma.innerText = ergo.onoma;
 
-        const h5Arithmos = document.createElement('h5');
-        h5Arithmos.innerText = ergo.arithmos_ergou;
+                const h5Arithmos = document.createElement('h5');
+                h5Arithmos.innerText = ergo.arithmos_ergou;
 
-        const buttonsDiv = document.createElement('div');
-        buttonsDiv.className = 'buttons';
+                const buttonsDiv = document.createElement('div');
+                buttonsDiv.className = 'buttons';
 
-        const editButton = document.createElement('button');
-        editButton.className = 'epex';
-        editButton.innerText = 'Επεξεργασία';
-        editButton.onclick = () => edit(ergo.arithmos_ergou);
+                const editButton = document.createElement('button');
+                editButton.className = 'epex';
+                editButton.innerText = 'Επεξεργασία';
+                editButton.onclick = () => edit(ergo.arithmos_ergou);
 
-        const deleteButton = document.createElement('button');
-        deleteButton.className = 'diag';
-        deleteButton.innerText = 'Διαγραφή';
-        deleteButton.onclick = () => deleteErgo(ergo.arithmos_ergou);
+                const deleteButton = document.createElement('button');
+                deleteButton.className = 'diag';
+                deleteButton.innerText = 'Διαγραφή';
+                deleteButton.onclick = () => deleteErgo(ergo.arithmos_ergou);
 
-        buttonsDiv.appendChild(editButton);
-        buttonsDiv.appendChild(deleteButton);
+                buttonsDiv.appendChild(editButton);
+                buttonsDiv.appendChild(deleteButton);
 
-        ergoDiv.appendChild(img);
-        ergoDiv.appendChild(h5Onoma);
-        ergoDiv.appendChild(h5Arithmos);
-        ergoDiv.appendChild(buttonsDiv);
+                ergoDiv.appendChild(img);
+                ergoDiv.appendChild(h5Onoma);
+                ergoDiv.appendChild(h5Arithmos);
+                ergoDiv.appendChild(buttonsDiv);
 
-        return ergoDiv;
+                resolve(ergoDiv);
+            };
+
+            img.onerror = () => {
+                console.error(`Error loading image: ${ergo.link}`);
+                img.src = 'path/to/default/image.jpg';  // Fallback image in case of an error
+                img.onload = () => {
+                    const h5Onoma = document.createElement('h5');
+                    h5Onoma.innerText = ergo.onoma;
+
+                    const h5Arithmos = document.createElement('h5');
+                    h5Arithmos.innerText = ergo.arithmos_ergou;
+
+                    const buttonsDiv = document.createElement('div');
+                    buttonsDiv.className = 'buttons';
+
+                    const editButton = document.createElement('button');
+                    editButton.className = 'epex';
+                    editButton.innerText = 'Επεξεργασία';
+                    editButton.onclick = () => edit(ergo.arithmos_ergou);
+
+                    const deleteButton = document.createElement('button');
+                    deleteButton.className = 'diag';
+                    deleteButton.innerText = 'Διαγραφή';
+                    deleteButton.onclick = () => deleteErgo(ergo.arithmos_ergou);
+
+                    buttonsDiv.appendChild(editButton);
+                    buttonsDiv.appendChild(deleteButton);
+
+                    ergoDiv.appendChild(img);
+                    ergoDiv.appendChild(h5Onoma);
+                    ergoDiv.appendChild(h5Arithmos);
+                    ergoDiv.appendChild(buttonsDiv);
+
+                    resolve(ergoDiv);
+                };
+                img.onerror = () => {
+                    reject(new Error(`Error loading fallback image: ${img.src}`));
+                };
+            };
+        });
     }
 
     // Create containers for each exhibition
@@ -89,15 +130,34 @@
 
     // Append erga to their respective exhibition container
     async function appendErgaToExhibitions() {
-        for (let ergo of erga) {
-            const ergoElement = await createErgoElement(ergo);
-            const exhibitionContainer = document.querySelector(`#exhibition-${ergo.id_ekthesis} .grid-erga`);
-            if (exhibitionContainer) {
-                exhibitionContainer.appendChild(ergoElement);
+        const fragmentMap = new Map();
+
+        // Create document fragments for each exhibition
+        current_exhibition.forEach(exhibition => {
+            fragmentMap.set(exhibition.id_ekthesis, document.createDocumentFragment());
+        });
+
+        // Load all images concurrently and append them to fragments
+        await Promise.all(erga.map(async (ergo) => {
+            try {
+                const ergoElement = await createErgoElement(ergo);
+                const fragment = fragmentMap.get(ergo.id_ekthesis);
+                if (fragment) {
+                    fragment.appendChild(ergoElement);
+                }
+            } catch (error) {
+                console.error(error);
             }
-        }
+        }));
+
+        // Append fragments to the DOM
+        fragmentMap.forEach((fragment, id_ekthesis) => {
+            const exhibitionContainer = document.querySelector(`#exhibition-${id_ekthesis} .grid-erga`);
+            if (exhibitionContainer) {
+                exhibitionContainer.appendChild(fragment);
+            }
+        });
     }
 
     appendErgaToExhibitions();
-
 </script>
