--- a/views/admin-add.hbs
+++ b/views/admin-add.hbs
@@ -50,7 +50,7 @@
             </div>
             <div class="radio-periodiki">
                 <input type="radio" id="periodiki" name="ekthesi" value="periodiki" onclick="chooseRoom()" required>
-                <label for="periodiki">Περιοδική Έκθεση</label><br>
+                <label for="periodiki">Αποθήκη</label><br>
             </div>
         </div>
         <div class="room" id="room">
@@ -66,7 +66,7 @@
 
     <div class="buttons">
         <button class="submit-btn" type="submit">Προσθήκη</button>
-        <a href="/admin">Ακύρωση</a>
+        <a href="/admin/edit">Ακύρωση</a>
     </div>
 </form>
 
