--- a/public/sidebar.css
+++ b/public/sidebar.css
@@ -10,6 +10,10 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position:fixed;
+  z-index: 0.8;
+  width: 100%;
+  top:0;
 }
 
 span {
