--- a/views/main.hbs
+++ b/views/main.hbs
@@ -16,7 +16,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>“I dream my painting and I paint my dream.”</h5>
                     <h6>― Vincent Van Gogh</h6>
-                    <button class="btn btn-outline-primary">Book a Ticket</button>
+                    <button class="btn btn-outline-primary ticket-button" onclick="goToTickets()">Book a Ticket</button>
                 </div>
             </div>
             <div class="carousel-item c-item">
@@ -25,7 +25,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>“I put my heart and soul into my work, and I have lost my mind in the process.”</h5>
                     <h6>― Vincent Van Gogh</h6>
-                    <button class="btn btn-outline-primary">Book a Ticket</button>
+                    <button class="btn btn-outline-primary ticket-button" onclick="goToTickets()">Book a Ticket</button>
                 </div>
             </div>
             <div class="carousel-item c-item">
@@ -34,7 +34,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h5>“I am seeking, I am striving, I am in it with all my heart.”</h5>
                     <h6>― Vincent Van Gogh</h6>
-                    <button class="btn btn-outline-primary">Book a Ticket</button>
+                    <button class="btn btn-outline-primary ticket-button" onclick="goToTickets()">Book a Ticket</button>
                 </div>
             </div>
         </div>
@@ -163,7 +163,7 @@
     <section class="up-events">
         <div class="container" id="events-title">
             <h1><strong><em>Επόμενες Εκθέσεις</em></strong></h1>
-            <a href="#events">Όλες οι εκθέσεις&gt;&gt;</a>
+            <a href="/exhibitions">Όλες οι εκθέσεις&gt;&gt;</a>
         </div>
 
         <div class="seperator">
@@ -171,14 +171,14 @@
         </div>
 
         <div class="container" id="events-body">
+            {{#each ektheseis}}
             <div id="first-exhibition">
                 <div class="date">
                     <div class="duration date">
                         <div class="first-date">
-                            <div class="number">1</div>
+                            <div class="number">{{this.enarxisDay}}</div>
                             <div class="day">
-                                <p><strong>ΙΟΥΝ 2024</strong></p>
-                                <p><strong>ΣΑΒΒΑΤΟ</strong></p>
+                                <p><strong>{{this.enarxisMonth}} {{this.enarxisYear}}</strong></p>
 
                             </div>
                         </div>
@@ -186,10 +186,9 @@
                             <hr>
                         </div>
                         <div class="second-date">
-                            <div class="number">16</div>
+                            <div class="number">{{this.lixisDay}}</div>
                             <div class="day">
-                                <p><strong>ΙΟΥΛ 2024</strong></p>
-                                <p><strong>ΤΡΙΤΗ</strong></p>
+                                <p><strong>{{this.lixisMonth}} {{this.lixisYear}}</strong></p>
 
                             </div>
                         </div>
@@ -197,53 +196,14 @@
                 </div>
 
                 <div id="hundred-erga">
-                    <h4><strong>Τα πρώτα εκατό έργα του Van Gogh</strong></h4>
-                    <img src="https://iiif.micr.io/wztKL/full/1800,/0/default.webp">
-                    <p>Η συγκεκριμένη έκθεση παρουσιάζει τους πίνακες που
-                        αποτέλεσαν την αρχή της καριέρας του Vincent Van Gogh
-                        με λεπτομερή περιγραφή του καθενός.</p>
-                    <a href="#erga"><em>Μάθετε περισσότερα&gt;&gt;</em></a>
+                    <h4><strong>{{this.onoma_ekthesis}}</strong></h4>
+                    <img src="{{this.link}}">
+                    <p>{{this.perigrafi}}</p>
+                    <a href="/exhibitions"><em>Μάθετε περισσότερα&gt;&gt;</em></a>
                 </div>
             </div>
-            <div id="sec-exhibition">
-                <div class="date" id="sec-date">
-                    <div class="duration date">
-                        <div class="first-date">
-                            <div class="number">22</div>
-                            <div class="day">
-                                <p><strong>ΙΟΥΛ 2024</strong></p>
-                                <p><strong>ΔΕΥΤΕΡΑ</strong></p>
-
-                            </div>
-                        </div>
-                        <div class="seperator">
-                            <hr>
-                        </div>
-                        <div class="second-date">
-                            <div class="number">2</div>
-                            <div class="day">
-                                <p><strong>ΑΥΓ 2024</strong></p>
-                                <p><strong>ΠΑΡΑΣΚΕΥΗ</strong></p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="afierwma">
-                    <h4><strong>Αφιέρωμα στον Paul Gauguin</strong></h4>
-                    <img
-                        src="https://cdn.britannica.com/30/166230-050-1577BF77/Self-portrait-oil-wood-Paul-Gauguin-Chester-Dale-1889.jpg">
-
-                </div>
-
-                <div id="paul-text">
-                    <p>O Paul ήταν ένας πολύ κοντινός φίλος του Van Gogh και εκπρόσωπος του ρεύματος του
-                        μεταϊμπρεσιονισμού που επηρέασε τα ρεύματα της μοντέρνας τέχνης. Το αφιέρωμα αυτό περιλαμβάνει
-                        τα δημοφιλέστερα έργα ενός απ’ τους σημαντικότερους (όπως θεωρήθηκε) ζωγράφους των δύο
-                        τελευταίων αιώνων.</p>
-                    <a href="#erga"><em>Μάθετε περισσότερα&gt;&gt;</em></a>
-                </div>
-            </div>
+            {{/each}}
+           
         </div>
 
 
@@ -252,3 +212,17 @@
 </section>
 
    {{>footer}}
+
+
+   <script>
+    let button = document.querySelector(".see-more");
+
+    button.addEventListener('click', () =>{
+        window.location.href="/collection";
+    })
+
+    function goToTickets(){
+        window.location.href = "/tickets";
+    }
+    
+   </script>
